change overflow type to fix create form z-index

--- a/app/styles/components/pages/deals/_dashboard.scss
+++ b/app/styles/components/pages/deals/_dashboard.scss
@@ -19,7 +19,7 @@ $col-padding: 20px;
 
   .column {
     padding: 0;
-    overflow: auto;
+    overflow: visible;
     height: auto;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: none;
